Removed number input arrow, add box shadow to texts in large screens, fixed some margins in large screens, align texts to justify to have the same ending of paragraphs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ body {
     /* Generic project styles */
     color: #3a3a3a;
     font-family: 'Roboto', sans-serif;
+    text-align: justify;
 }
 
 /* Header */
@@ -210,7 +211,11 @@ hr {
 }
 
 p {
-    padding: 0 35px 20px 35px;
+    padding: 25px 35px;
+}
+
+.no-shadow {
+    box-shadow: none;
 }
 
 h4 {
@@ -336,6 +341,13 @@ input {
 
 input:focus {
     background-color: rgb(218, 218, 218);
+}
+
+/* Number input arrow remove*/
+.phone-input::-webkit-outer-spin-button,
+.phone-input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 .message-input {
@@ -511,6 +523,8 @@ footer {
     p {
         width: 85%;
         align-self: center;
+        box-shadow: 0px 0px 35px 5px gray;
+        margin: 0 20px;
     }
 
     h4 {
@@ -573,7 +587,15 @@ footer {
     }
 
     .products-description {
-        width: 35%;
+        width: 30%;
+    }
+
+    .quality-steps-image {
+        margin-bottom: 25px;
+    }
+
+    .analyze-header {
+        margin-top: 25px;
     }
 
     /* Contact Page */
@@ -599,6 +621,10 @@ footer {
 
     label {
         margin: 16px 0 6px 45px;
+    }
+
+    .sales-agency-lable {
+        text-align: left;
     }
 }
 
